It was rewritten with typescript, react, and recompose

--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" class="global">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SVGISH</title>
-  <link rel="dns-prefetch" href="https://fonts.googleapis.com/" />
-  <link rel="preload" href="./dist/manifest.js" as="script">
-  <link rel="preload" href="./dist/vendor.js" as="script">
-  <link rel="preload" href="./dist/index.js" as="script">
-  <link rel="preload" href="./dist/style.css" as="style">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli">
-  <link rel="stylesheet" href="./dist/style.css">
-</head>
-<body>
-  <div id="app"></div>
-  <script src="./dist/manifest.js" defer></script>
-  <script src="./dist/vendor.js" defer></script>
-  <script src="./dist/index.js" defer></script>
-</body>
+<html>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
+    <title>Svgish</title>
+    <link rel="preload" as="script" href="./dist/renderer/manifest.f55722a09fd505e89a2a.js">
+    <link rel="preload" as="script" href="./dist/renderer/vendor.1aac35287241cecd31e3.js">
+    <link rel="preload" as="script" href="./dist/renderer/renderer.e53345ee6840bc20a7fe.js">
+    <link rel="preload" as="style" href="./dist/stylesheets/style.css">
+    <link rel="stylesheet" href="./dist/stylesheets/style.css">
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="./dist/renderer/manifest.f55722a09fd505e89a2a.js" defer></script>
+    <script src="./dist/renderer/vendor.1aac35287241cecd31e3.js" defer></script>
+    <script src="./dist/renderer/renderer.e53345ee6840bc20a7fe.js" defer></script>
+  </body>
 </html>
